gccida/c2/convert_from_ssa
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2645:4: error: expected ';' after expression
rtx v39; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2645:5: error: use of undeclared identifier 'v39'
rtx v39; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2647:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2647:5: error: use of undeclared identifier 'v41'
rtx v41; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2648:4: error: expected ';' after expression
rtx v42; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2648:5: error: use of undeclared identifier 'v42'
rtx v42; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2676:4: error: expected ';' after expression
rtx v71; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2676:5: error: use of undeclared identifier 'v71'
rtx v71; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2689:4: error: expected ';' after expression
rtx x; // [rsp+18h] [rbp-3140h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2689:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+18h] [rbp-3140h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2714:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)nonnote_insn[2]; 
               ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2823:1: error: use of undeclared identifier 'x'
x = *( rtx *)( v27 + 16); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2823:13: error: expected expression
x = *( rtx *)( v27 + 16); 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2824:18: error: use of undeclared identifier 'x'
v28 = *( _WORD *)x; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2828:16: error: use of undeclared identifier 'x'
for_each_rtx( &x, mark_reg_in_phi, element); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2833:26: error: use of undeclared identifier 'x'
bitmap_set_bit( element, x->fld[0].rtint); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2851:14: error: expected expression
v31 = ( rtx *)*( ( _QWORD *)&basic_block_info->name + v29); 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2862:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v35 = ( __int64)rtx[2]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/ssa.c:2882:1: error: use of undeclared identifier 'v39'
v39 = v31[5]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_from_ssa/src/obj/ssa.o] Error 1
